[project]
name = "humandetection"
version = "0.1.0"
description = "YOLOv8 Human Detection with Camera"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics==8.0.196",
    "opencv-python==4.8.1.78",
    "numpy==1.24.3",
    "pillow==10.0.1",
    "torch==2.0.1",
    "torchvision==0.15.2",
]
